5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1808_2131.log
== TEST (2019-06-28 08:03:56) 
-- CODE:
print(range(1,5))
	
-- OUTPUT:
range(1, 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:07:28) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int("Digite o numero de termos da serie: ")
cosx = 1
for i in range(1, nt):
	cosx = cosx + ((-1)**i*(teta**2*i)/factorial(2*i))
print(round(cosx,11))	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nt = int("Digite o numero de termos da serie: ")
ValueError: invalid literal for int() with base 10: 'Digite o numero de termos da serie: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:08:11) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	cosx = cosx + ((-1)**i*(teta**2*i)/factorial(2*i))
print(round(cosx,11))	

	
	
-- OUTPUT:
0.76333628552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:08:35) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	cosx = cosx + ((-1)**i*(teta**2*i)/factorial(2*i))
print(round(cosx,11))	

	
	
-- OUTPUT:
0.76333628552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:08:45) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	cosx = cosx + ((-1)**i*(teta**2*i)/factorial(2*i))
print(round(cosx,11))	

	
	
-- OUTPUT:
0.76333628552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-28 08:09:33) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	cosx = cosx + ((-1)**i*(teta**2*i)/factorial(2*i))
print(round(cosx,11))	

	
	
-- EXECUTION TIME:
0.737387
-- TEST CASE 1:
---- input:
0.75
36
---- correct output:
0.73168886887
---- user output:
0.76333628552
-- TEST CASE 2:
---- input:
0.26
47
---- correct output:
0.96638997813
---- user output:
0.97155828071
-- TEST CASE 3:
---- input:
0.47
58
---- correct output:
0.8915682882
---- user output:
0.90705952973
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-28 08:09:57) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	cosx = cosx + ((-1)**i*(teta**2*i)/factorial(2*i))
print(round(cosx,10))	

	
	
-- EXECUTION TIME:
0.698725
-- TEST CASE 1:
---- input:
0.75
36
---- correct output:
0.73168886887
---- user output:
0.7633362855
-- TEST CASE 2:
---- input:
0.26
47
---- correct output:
0.96638997813
---- user output:
0.9715582807
-- TEST CASE 3:
---- input:
0.47
58
---- correct output:
0.8915682882
---- user output:
0.9070595297
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:10:05) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	cosx = cosx + ((-1)**i*(teta**2*i)/factorial(2*i))
print(round(cosx,10))	

	
	
-- OUTPUT:
0.7633362855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:11:07) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	cosx = cosx + ((-1)**i*(teta**2*i)/factorial(2*i))
print(round(cosx,10))	

	
	
-- OUTPUT:
0.7633362855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:11:49) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	cosx = cosx + ((-1)**i*(teta**2*i)/factorial(2*i))
print(round(cosx,10))	

	
	
-- OUTPUT:
0.7633362855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:12:06) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	cosx = cosx + ((-1)**i*(teta**2*i)/factorial(2*i))
print(round(cosx,10))	

	
	
-- OUTPUT:
0.7633362855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:12:22) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	cosx = cosx + ((-1)**i*(teta**2*i)/factorial(2*i))
print(round(cosx,10))	

	
	
-- OUTPUT:
0.7633362855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:14:52) 
-- CODE:
#from math import *
#teta = eval(input("Digite o valar do angulo: "))
#nt = int(input("Digite o numero de termos da serie: "))
#cosx = 1
#for i in range(1, nt):
#	cosx = cosx + (((-1)**i)*(teta**2*i)/factorial(2*i))
#print(round(cosx,10))	

print(factorial(2))	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(factorial(2))	
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:23:05) 
-- CODE:
from math import *
#teta = eval(input("Digite o valar do angulo: "))
#nt = int(input("Digite o numero de termos da serie: "))
#cosx = 1
#for i in range(1, nt):
#	cosx = cosx + (((-1)**i)*(teta**2*i)/factorial(2*i))
#print(round(cosx,10))	

print(factorial(2))	
	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:23:15) 
-- CODE:
from math import *
#teta = eval(input("Digite o valar do angulo: "))
#nt = int(input("Digite o numero de termos da serie: "))
#cosx = 1
#for i in range(1, nt):
#	cosx = cosx + (((-1)**i)*(teta**2*i)/factorial(2*i))
#print(round(cosx,10))	

print(factorial(4))	
	
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:24:48) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	cosx = cosx + (((-1)**i)*(teta**2*i))/factorial(2*i)
print(round(cosx,10))	

print(factorial(4))	
	
-- OUTPUT:
0.7633362855
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:25:06) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	cosx = cosx + (((-1)**i)*(teta**2*i))/factorial(2*i)
print(round(cosx,10))	


	
-- OUTPUT:
0.7633362855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:36:29) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	exp = (-1)**i
	num = (teta**2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	print(parcela)



	
-- OUTPUT:
-0.28125
0.046875
-0.00234375
5.580357142857143e-05
-7.750496031746032e-07
7.045905483405483e-09
-4.516606079106079e-11
2.1507647995743234e-13
-7.907223527846777e-16
2.3120536631130927e-18
-5.5048896740787924e-21
1.0879228604898799e-23
-1.8132047674831332e-26
2.5829127741924975e-29
-3.1809270618134203e-32
3.4203516793692693e-35
-3.238969393342111e-38
2.7218230196152193e-41
-2.0434106753868012e-44
1.3788196190194342e-47
-8.407436701338013e-51
4.6552805655249237e-54
-2.3511518007701635e-57
1.087489269551417e-60
-4.623678867140379e-64
1.81320739887858e-67
-6.57912699157685e-71
2.2151942732581985e-74
-6.93983168313972e-78
2.028004583033232e-81
-5.540996128506098e-85
1.418585798388658e-88
-3.410062015357351e-92
7.711583028849732e-96
-1.643559895321767e-99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:36:40) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	exp = (-1)**i
	num = (teta**2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	print(parcela)



	
-- OUTPUT:
-0.28125
0.046875
-0.00234375
5.580357142857143e-05
-7.750496031746032e-07
7.045905483405483e-09
-4.516606079106079e-11
2.1507647995743234e-13
-7.907223527846777e-16
2.3120536631130927e-18
-5.5048896740787924e-21
1.0879228604898799e-23
-1.8132047674831332e-26
2.5829127741924975e-29
-3.1809270618134203e-32
3.4203516793692693e-35
-3.238969393342111e-38
2.7218230196152193e-41
-2.0434106753868012e-44
1.3788196190194342e-47
-8.407436701338013e-51
4.6552805655249237e-54
-2.3511518007701635e-57
1.087489269551417e-60
-4.623678867140379e-64
1.81320739887858e-67
-6.57912699157685e-71
2.2151942732581985e-74
-6.93983168313972e-78
2.028004583033232e-81
-5.540996128506098e-85
1.418585798388658e-88
-3.410062015357351e-92
7.711583028849732e-96
-1.643559895321767e-99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:37:44) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	exp = (-1)**i
	num = (teta**2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	print(parcela)



	
-- OUTPUT:
-0.28125
0.046875
-0.00234375
5.580357142857143e-05
-7.750496031746032e-07
7.045905483405483e-09
-4.516606079106079e-11
2.1507647995743234e-13
-7.907223527846777e-16
2.3120536631130927e-18
-5.5048896740787924e-21
1.0879228604898799e-23
-1.8132047674831332e-26
2.5829127741924975e-29
-3.1809270618134203e-32
3.4203516793692693e-35
-3.238969393342111e-38
2.7218230196152193e-41
-2.0434106753868012e-44
1.3788196190194342e-47
-8.407436701338013e-51
4.6552805655249237e-54
-2.3511518007701635e-57
1.087489269551417e-60
-4.623678867140379e-64
1.81320739887858e-67
-6.57912699157685e-71
2.2151942732581985e-74
-6.93983168313972e-78
2.028004583033232e-81
-5.540996128506098e-85
1.418585798388658e-88
-3.410062015357351e-92
7.711583028849732e-96
-1.643559895321767e-99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:38:57) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	exp = (-1)**i
	num = (teta**2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela



	
-- OUTPUT:
-0.28125
0.046875
-0.00234375
5.580357142857143e-05
-7.750496031746032e-07
7.045905483405483e-09
-4.516606079106079e-11
2.1507647995743234e-13
-7.907223527846777e-16
2.3120536631130927e-18
-5.5048896740787924e-21
1.0879228604898799e-23
-1.8132047674831332e-26
2.5829127741924975e-29
-3.1809270618134203e-32
3.4203516793692693e-35
-3.238969393342111e-38
2.7218230196152193e-41
-2.0434106753868012e-44
1.3788196190194342e-47
-8.407436701338013e-51
4.6552805655249237e-54
-2.3511518007701635e-57
1.087489269551417e-60
-4.623678867140379e-64
1.81320739887858e-67
-6.57912699157685e-71
2.2151942732581985e-74
-6.93983168313972e-78
2.028004583033232e-81
-5.540996128506098e-85
1.418585798388658e-88
-3.410062015357351e-92
7.711583028849732e-96
-1.643559895321767e-99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:39:35) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	exp = (-1)**i
	num = (teta**2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela



	
-- OUTPUT:
-0.28125
0.046875
-0.00234375
5.580357142857143e-05
-7.750496031746032e-07
7.045905483405483e-09
-4.516606079106079e-11
2.1507647995743234e-13
-7.907223527846777e-16
2.3120536631130927e-18
-5.5048896740787924e-21
1.0879228604898799e-23
-1.8132047674831332e-26
2.5829127741924975e-29
-3.1809270618134203e-32
3.4203516793692693e-35
-3.238969393342111e-38
2.7218230196152193e-41
-2.0434106753868012e-44
1.3788196190194342e-47
-8.407436701338013e-51
4.6552805655249237e-54
-2.3511518007701635e-57
1.087489269551417e-60
-4.623678867140379e-64
1.81320739887858e-67
-6.57912699157685e-71
2.2151942732581985e-74
-6.93983168313972e-78
2.028004583033232e-81
-5.540996128506098e-85
1.418585798388658e-88
-3.410062015357351e-92
7.711583028849732e-96
-1.643559895321767e-99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:39:52) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	exp = (-1)**i
	num = (teta**2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
	print(cosx)
	



	
-- OUTPUT:
0.71875
0.765625
0.76328125
0.7633370535714286
0.7633362785218254
0.7633362855677309
0.7633362855225648
0.7633362855227799
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:40:43) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	exp = (-1)**i
	num = (teta**2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
	print(cosx)
	



	
-- OUTPUT:
0.71875
0.765625
0.76328125
0.7633370535714286
0.7633362785218254
0.7633362855677309
0.7633362855225648
0.7633362855227799
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:41:02) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(0, nt):
	exp = (-1)**i
	num = (teta**2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
	print(cosx)
	



	
-- OUTPUT:
1.0
0.71875
0.765625
0.76328125
0.7633370535714286
0.7633362785218254
0.7633362855677309
0.7633362855225648
0.7633362855227799
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:41:14) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(0, nt):
	exp = (-1)**i
	num = (teta**2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
	print(cosx)
	



	
-- OUTPUT:
1.0
0.71875
0.765625
0.76328125
0.7633370535714286
0.7633362785218254
0.7633362855677309
0.7633362855225648
0.7633362855227799
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:41:37) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(0, nt):
	exp = (-1)**i
	num = (teta**2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
	print(cosx)
	



	
-- OUTPUT:
1.0
0.71875
0.765625
0.76328125
0.7633370535714286
0.7633362785218254
0.7633362855677309
0.7633362855225648
0.7633362855227799
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
0.7633362855227791
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:47:18) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(0, nt):
#	exp = (-1)**i
#	num = (teta**2*i)
#	den = factorial(2*i)
#	parcela = (exp*num)/den
#	cosx = cosx + parcela
	print(i)
	



	
-- OUTPUT:
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 08:47:48) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
#	exp = (-1)**i
#	num = (teta**2*i)
#	den = factorial(2*i)
#	parcela = (exp*num)/den
#	cosx = cosx + parcela
	print(i)
	



	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 09:43:09) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 0
for i in range(0, nt):
	exp = (-1)**i
	num = ((teta**(2*i))
	den = factorial(2*i)
#	parcela = (exp*num)/den
#	cosx = cosx + parcela
	print(exp)
	print(num)
	print(den)		 
	



	
-- ERROR:
File "XXXX", line 8
    den = factorial(2*i)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:03:30) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 0
for i in range(1, nt):
	exp = (-1)**i
	num = ((teta**(2*i))
	den = factorial(2*i)
#	parcela = (exp*num)/den
#	cosx = cosx + parcela
	print(exp)
	print(num)
	print(den)		 
	



	
-- ERROR:
File "XXXX", line 8
    den = factorial(2*i)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:04:08) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 0
for i in range(1, nt):
	exp = (-1)**i
	num = ((teta**(2*i))
	den = factorial(2*i)
#	parcela = (exp*num)/den
#	cosx = cosx + parcela
	print(exp)
	print(num)
	print(den)		 
	



	
-- ERROR:
File "XXXX", line 8
    den = factorial(2*i)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:04:31) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	exp = (-1)**i
	num = ((teta**(2*i))
	den = factorial(2*i)
#	parcela = (exp*num)/den
#	cosx = cosx + parcela
	print(exp)
	print(num)
	print(den)		 
	



	
-- ERROR:
File "XXXX", line 8
    den = factorial(2*i)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:05:04) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(1, nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
#	parcela = (exp*num)/den
#	cosx = cosx + parcela
	print(exp)
	print(num)
	print(den)		 
	



	
-- OUTPUT:
-1
0.5625
2
1
0.31640625
24
-1
0.177978515625
720
1
0.1001129150390625
40320
-1
0.056313514709472656
3628800
1
0.03167635202407837
479001600
-1
0.017817948013544083
87178291200
1
0.010022595757618546
20922789888000
-1
0.005637710113660432
6402373705728000
1
0.0031712119389339932
2432902008176640000
-1
0.0017838067156503712
1124000727777607680000
1
0.0010033912775533338
620448401733239439360000
-1
0.0005644075936237503
403291461126605635584000000
1
0.0003174792714133595
304888344611713860501504000000
-1
0.00017858209017001473
265252859812191058636308480000000
1
0.00010045242572063329
263130836933693530167218012160000000
-1
5.650448946785622e-05
295232799039604140847618609643520000000
1
3.178377532566913e-05
371993326789901217467999448150835200000000
-1
1.7878373620688882e-05
523022617466601111760007224100074291200000000
1
1.0056585161637497e-05
815915283247897734345611269596115894272000000000
-1
5.656829153421092e-06
1405006117752879898543142606244511569936384000000000
1
3.1819663987993
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:05:22) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 1
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
#	parcela = (exp*num)/den
#	cosx = cosx + parcela
	print(exp)
	print(num)
	print(den)		 
	



	
-- OUTPUT:
1
1.0
1
-1
0.5625
2
1
0.31640625
24
-1
0.177978515625
720
1
0.1001129150390625
40320
-1
0.056313514709472656
3628800
1
0.03167635202407837
479001600
-1
0.017817948013544083
87178291200
1
0.010022595757618546
20922789888000
-1
0.005637710113660432
6402373705728000
1
0.0031712119389339932
2432902008176640000
-1
0.0017838067156503712
1124000727777607680000
1
0.0010033912775533338
620448401733239439360000
-1
0.0005644075936237503
403291461126605635584000000
1
0.0003174792714133595
304888344611713860501504000000
-1
0.00017858209017001473
265252859812191058636308480000000
1
0.00010045242572063329
263130836933693530167218012160000000
-1
5.650448946785622e-05
295232799039604140847618609643520000000
1
3.178377532566913e-05
371993326789901217467999448150835200000000
-1
1.7878373620688882e-05
523022617466601111760007224100074291200000000
1
1.0056585161637497e-05
815915283247897734345611269596115894272000000000
-1
5.656829153421092e-06
1405006117752879898543142606244511569936384000000000
1
3.18196
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:05:32) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
#	parcela = (exp*num)/den
#	cosx = cosx + parcela
	print(exp)
	print(num)
	print(den)		 
	



	
-- OUTPUT:
1
1.0
1
-1
0.5625
2
1
0.31640625
24
-1
0.177978515625
720
1
0.1001129150390625
40320
-1
0.056313514709472656
3628800
1
0.03167635202407837
479001600
-1
0.017817948013544083
87178291200
1
0.010022595757618546
20922789888000
-1
0.005637710113660432
6402373705728000
1
0.0031712119389339932
2432902008176640000
-1
0.0017838067156503712
1124000727777607680000
1
0.0010033912775533338
620448401733239439360000
-1
0.0005644075936237503
403291461126605635584000000
1
0.0003174792714133595
304888344611713860501504000000
-1
0.00017858209017001473
265252859812191058636308480000000
1
0.00010045242572063329
263130836933693530167218012160000000
-1
5.650448946785622e-05
295232799039604140847618609643520000000
1
3.178377532566913e-05
371993326789901217467999448150835200000000
-1
1.7878373620688882e-05
523022617466601111760007224100074291200000000
1
1.0056585161637497e-05
815915283247897734345611269596115894272000000000
-1
5.656829153421092e-06
1405006117752879898543142606244511569936384000000000
1
3.18196
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:07:26) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
#	parcela = (exp*num)/den
#	cosx = cosx + parcela
	print(exp)
	print(num)
	print(den)		 
print((exp*num)/den)	



	
-- OUTPUT:
1
1.0
1
-1
0.5625
2
1
0.31640625
24
-1
0.177978515625
720
1
0.1001129150390625
40320
-1
0.056313514709472656
3628800
1
0.03167635202407837
479001600
-1
0.017817948013544083
87178291200
1
0.010022595757618546
20922789888000
-1
0.005637710113660432
6402373705728000
1
0.0031712119389339932
2432902008176640000
-1
0.0017838067156503712
1124000727777607680000
1
0.0010033912775533338
620448401733239439360000
-1
0.0005644075936237503
403291461126605635584000000
1
0.0003174792714133595
304888344611713860501504000000
-1
0.00017858209017001473
265252859812191058636308480000000
1
0.00010045242572063329
263130836933693530167218012160000000
-1
5.650448946785622e-05
295232799039604140847618609643520000000
1
3.178377532566913e-05
371993326789901217467999448150835200000000
-1
1.7878373620688882e-05
523022617466601111760007224100074291200000000
1
1.0056585161637497e-05
815915283247897734345611269596115894272000000000
-1
5.656829153421092e-06
1405006117752879898543142606244511569936384000000000
1
3.18196
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:07:45) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
#	parcela = (exp*num)/den
#	cosx = cosx + parcela
	print(exp)
	print(num)
	print(den)		 
print((exp*num)/den)	



	
-- OUTPUT:
1
1.0
1
-1
0.5625
2
1
0.31640625
24
-1
0.177978515625
720
1
0.1001129150390625
40320
-1
0.056313514709472656
3628800
1
0.03167635202407837
479001600
-1
0.017817948013544083
87178291200
1
0.010022595757618546
20922789888000
-1
0.005637710113660432
6402373705728000
1
0.0031712119389339932
2432902008176640000
-1
0.0017838067156503712
1124000727777607680000
1
0.0010033912775533338
620448401733239439360000
-1
0.0005644075936237503
403291461126605635584000000
1
0.0003174792714133595
304888344611713860501504000000
-1
0.00017858209017001473
265252859812191058636308480000000
1
0.00010045242572063329
263130836933693530167218012160000000
-1
5.650448946785622e-05
295232799039604140847618609643520000000
1
3.178377532566913e-05
371993326789901217467999448150835200000000
-1
1.7878373620688882e-05
523022617466601111760007224100074291200000000
1
1.0056585161637497e-05
815915283247897734345611269596115894272000000000
-1
5.656829153421092e-06
1405006117752879898543142606244511569936384000000000
1
3.18196
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:09:18) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(cosx)	



	
-- OUTPUT:
0.7316888688738209
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:09:26) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(cosx)	



	
-- OUTPUT:
0.7316888688738209
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:09:37) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(cosx)	



	
-- OUTPUT:
0.7316888688738209
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:10:19) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:10:34) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:10:53) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 11:11:39) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- EXECUTION TIME:
0.88652
-- TEST CASE 1:
---- input:
0.75
36
---- correct output:
0.73168886887
---- user output:
0.7316888689
-- TEST CASE 2:
---- input:
0.26
47
---- correct output:
0.96638997813
---- user output:
0.9663899781
-- TEST CASE 3:
---- input:
0.47
58
---- correct output:
0.8915682882
---- user output:
0.8915682882
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:17:41) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
teta = radians(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.9999143276
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:17:51) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
teta = radians(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.9999143276
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:18:16) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
teta = radians(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.9999143276
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:18:51) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
teta = math.radians(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    teta = math.radians(teta)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:19:57) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:20:26) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:20:56) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:21:07) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:21:28) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:22:05) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:22:21) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:22:42) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:23:09) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:23:32) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:23:48) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:24:04) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:24:48) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 15:50:28) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 15:57:39) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 1
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
1.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 15:58:39) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 1
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx - parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.2683111311
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 15:58:59) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 1
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx - parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.2683111311
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 15:59:23) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 1
for i in range(nt):
	exp = (-1)**i
	num = teta**(2*i)
	den = factorial(2*i)
	parcela = (exp*num)/den
	cosx = cosx - parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.2683111311
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 16:02:52) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	if(-1 < teta < 1):
		exp = (-1)**i
		num = teta**(2*i)
		den = factorial(2*i)
		parcela = (exp*num)/den
		cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 16:03:13) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	if(-1 < teta < 1):
		exp = (-1)**i
		num = teta**(2*i)
		den = factorial(2*i)
		parcela = (exp*num)/den
		cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 16:03:33) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	if(-1 < teta < 1):
		exp = (-1)**i
		num = teta**(2*i)
		den = factorial(2*i)
		parcela = (exp*num)/den
		cosx = cosx + parcela
print(round(cosx, 10))	



	
-- EXECUTION TIME:
0.641979
-- TEST CASE 1:
---- input:
0.75
36
---- correct output:
0.73168886887
---- user output:
0.75
0.7316888689
-- TEST CASE 2:
---- input:
0.26
47
---- correct output:
0.96638997813
---- user output:
0.26
0.9663899781
-- TEST CASE 3:
---- input:
0.47
58
---- correct output:
0.8915682882
---- user output:
0.47
0.8915682882
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 16:04:19) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	if(-1 < teta < 1):
		exp = (-1)**i
		num = teta**(2*i)
		den = factorial(2*i)
		parcela = (exp*num)/den
		cosx = cosx + parcela
print(round(cosx, 10))	



	
-- OUTPUT:
0.75
0.7316888689
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 16:04:50) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	if(-1 < teta < 1):
		exp = (-1)**i
		num = teta**(2*i)
		den = factorial(2*i)
		parcela = (exp*num)/den
		cosx = cosx + parcela
print(round(cosx, 11))	



	
-- OUTPUT:
0.75
0.73168886887
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 16:05:06) 
-- CODE:
from math import *
teta = eval(input("Digite o valar do angulo: "))
nt = int(input("Digite o numero de termos da serie: "))
print(teta)
cosx = 0
for i in range(nt):
	if(-1 < teta < 1):
		exp = (-1)**i
		num = teta**(2*i)
		den = factorial(2*i)
		parcela = (exp*num)/den
		cosx = cosx + parcela
print(round(cosx, 11))	



	
-- EXECUTION TIME:
0.644538
-- TEST CASE 1:
---- input:
0.75
36
---- correct output:
0.73168886887
---- user output:
0.75
0.73168886887
-- TEST CASE 2:
---- input:
0.26
47
---- correct output:
0.96638997813
---- user output:
0.26
0.96638997813
-- TEST CASE 3:
---- input:
0.47
58
---- correct output:
0.8915682882
---- user output:
0.47
0.8915682882
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:28:48) 
-- CODE:
from math import*
x = eval(input("digite um angulo:"))
N = int(input("numero de termos:"))

cox = 1.0
exp = 2
fato = 2

for i in range(N):
	if(i % 2 == 0 ):
		div = (x**exp)/factorial(fato)
	else:
		div = ((x**exp)/factorial(fato))*(-1)
		cox = cox - div
	exp = exp + 2
	fato = fato + 2
print(round(cox,11))



	
-- OUTPUT:
1.01318607678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:29:22) 
-- CODE:
from math import*
x = eval(input("digite um angulo:"))
N = int(input("numero de termos:"))

cox = 1.0
exp = 2
fato = 2

for i in range(N):
	if(i % 2 == 0 ):
		div = (x**exp)/factorial(fato)
	else:
		div = ((x**exp)/factorial(fato))*(-1)
		cox = cox - div
	exp = exp + 2
	fato = fato + 2
print(round(cox,11))



	
-- OUTPUT:
1.01318607678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:29:37) 
-- CODE:
from math import*
x = eval(input("digite um angulo:"))
N = int(input("numero de termos:"))

cox = 1.0
exp = 2
fato = 2

for i in range(N):
	if(i % 2 == 0 ):
		div = (x**exp)/factorial(fato)
	else:
		div = ((x**exp)/factorial(fato))*(-1)
		cox = cox - div
	exp = exp + 2
	fato = fato + 2
print(round(cox,11))



	
-- EXECUTION TIME:
0.776011
-- TEST CASE 1:
---- input:
0.75
36
---- correct output:
0.73168886887
---- user output:
1.01318607678
-- TEST CASE 2:
---- input:
0.26
47
---- correct output:
0.96638997813
---- user output:
1.00019040718
-- TEST CASE 3:
---- input:
0.47
58
---- correct output:
0.8915682882
---- user output:
1.00203325947
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
